k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend
  namespace: guestbook
  labels:
    app: frontend
    project: guestbook
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5000
